@@ -13,23 +13,23 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortAsc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK2",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -38,7 +38,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2"
         );
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -56,7 +56,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK2",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -65,7 +65,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2"
         );
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
